# offerings4ai

./: .env.example  .gitignore  Agents.md  README.md  TODO.md  TODO_RELEASE.txt  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: db.py  dependencies.py  main.py  mcp_server.py  middleware.py  models.py  schemas.py  worker.py  worker_service.py
backend/app/api/routes/: __init__.py  auth.py  health.py  ideas.py  public.py
backend/app/core/: config.py  http_security.py  security.py
backend/app/data/: seed_signals.json
backend/app/migrations/: __init__.py  cli.py  runner.py
backend/app/services/: auth.py  email.py  evaluator.py  fingerprints.py  ideas.py  payments.py  public_catalog.py  queue.py  request_limits.py  safety.py
backend/sparkmarket_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_api.py
backend/wheels/: jiter-0.13.0-cp312-cp312-macosx_11_0_arm64.whl  sqlalchemy-2.0.48-cp312-cp312-macosx_11_0_arm64.whl
backend/wheels_linux/: cffi-2.0.0-cp311-cp311-manylinux2014_aarch64.manylinux_2_17_aarch64.whl  jiter-0.13.0-cp311-cp311-manylinux_2_17_aarch64.manylinux2014_aarch64.whl  mcp-1.5.0-py3-none-any.whl  psycopg-3.2.13-py3-none-any.whl  sqlalchemy-2.0.48-cp311-cp311-manylinux2014_aarch64.manylinux_2_17_aarch64.manylinux_2_28_aarch64.whl  websockets-16.0-cp311-cp311-manylinux2014_aarch64.manylinux_2_17_aarch64.manylinux_2_28_aarch64.whl
docs/: architecture.md  cloud-migration-plan.md  google-cloud.md  launch-checklist.md
frontend/: Dockerfile  index.html  nginx.conf  nginx.conf.template  (+4 more)
(+26 files in other folders)
