[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "offering4ai-api"
version = "0.1.0"
description = "Offering4AI backend API, evaluation worker, and payout simulator"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.116,<1.0",
  "uvicorn[standard]>=0.35,<1.0",
  "sqlalchemy>=2.0.38,<3.0",
  "psycopg[binary]>=3.2.6,<4.0",
  "pydantic>=2.11,<3.0",
  "pydantic-settings>=2.8,<3.0",
  "python-jose[cryptography]>=3.4,<4.0",
  "passlib[bcrypt]>=1.7.4,<2.0",
  "python-multipart>=0.0.20,<1.0",
  "redis>=5.2,<6.0",
  "rq>=1.16,<2.0",
  "openai>=1.68,<2.0",
  "email-validator>=2.2,<3.0",
  "mcp>=1.5,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "httpx>=0.28,<1.0",
  "ruff>=0.11,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
